--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ tokio = { version = "1.32", features = ["full"] }
 clap = { version = "4.2", features = ["derive"] }
 once_cell = "1.17"
 rand = "0.8"
-
-[dev-dependencies]
 portpicker = "0.1.1"
+
+[profile.release]
+debug = true
