--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -60,6 +60,10 @@ jobs:
         with:
           toolchain: ${{ steps.decide_rust_toolchain.outputs.toolchain }}
 
+      - name: Add rust-src component (musl only)
+        if: contains(matrix.target, 'musl')
+        run: rustup component add rust-src
+
       - name: Install cross
         run: cargo install cross
 
